test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-nil.good
init-field-dflt-nonnil-borrowed-from-oknil-nil.chpl:8: error: Cannot initialize 'lhs' of type 'borrowed MyClass' from 'nil'
init-field-dflt-nonnil-borrowed-from-oknil-nil.chpl:13: error: done
